--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "turbolinks": "^5.2.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
+    "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.6.10"
   },
   "version": "0.1.0",
