--- a/package.json
+++ b/package.json
@@ -2,20 +2,31 @@
   "name": "orcid_connector",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.4.3",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
+    "core-js": "3",
+    "css-loader": "^2.1.1",
     "milligram": "^1.3.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "turbolinks": "^5.2.0",
+    "typescript": "^3.4.3",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-resource": "^1.5.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@vue/cli-service": "^3.6.0",
     "webpack-dev-server": "^3.2.1"
   }
 }
